{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 322,
  "lineage": "debcd542-4124-af4b-d409-44bd8d6bcb76",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip_instancia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e034098af21bed1d",
            "association_id": "eipassoc-09db58377bf6c8783",
            "domain": "vpc",
            "id": "eipalloc-0e034098af21bed1d",
            "instance": "i-015b7be20f5ada36f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05c7c152e226dc472",
            "private_dns": "ip-10-0-1-39.ec2.internal",
            "private_ip": "10.0.1.39",
            "public_dns": "ec2-50-16-64-235.compute-1.amazonaws.com",
            "public_ip": "50.16.64.235",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "cost:env": "academy",
              "cost:project": "ac-us-terraform-202206",
              "env": "ac-tr-202206"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.instancia_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instancia_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:509130302659:instance/i-015b7be20f5ada36f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-015b7be20f5ada36f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ac_ups_terraform_202206",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05c7c152e226dc472",
            "private_dns": "ip-10-0-1-39.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.39",
            "public_ip": "50.16.64.235",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-093f77837998d65e8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01595624a7b9b96ab",
            "tags": {
              "Name": "ec2_proyecto_lucas"
            },
            "tags_all": {
              "Name": "ec2_proyecto_lucas",
              "cost:env": "academy",
              "cost:project": "ac-us-terraform-202206",
              "env": "ac-tr-202206"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-052bbe6bf3a5fc864"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_instancia",
            "aws_subnet.subnet_1",
            "aws_vpc.vpc_proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:internet-gateway/igw-08ef7b82c5aa670b6",
            "id": "igw-08ef7b82c5aa670b6",
            "owner_id": "509130302659",
            "tags": {
              "Name": "ig_proyecto_lucas"
            },
            "tags_all": {
              "Name": "ig_proyecto_lucas",
              "cost:env": "academy",
              "cost:project": "ac-us-terraform-202206",
              "env": "ac-tr-202206"
            },
            "vpc_id": "vpc-0fa079084845b1446"
          },
          "dependencies": [
            "aws_vpc.vpc_proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:route-table/rtb-0e54391be5fe02762",
            "id": "rtb-0e54391be5fe02762",
            "owner_id": "509130302659",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08ef7b82c5aa670b6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_table_lucas"
            },
            "tags_all": {
              "Name": "route_table_lucas",
              "cost:env": "academy",
              "cost:project": "ac-us-terraform-202206",
              "env": "ac-tr-202206"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa079084845b1446"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway_1",
            "aws_vpc.vpc_proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f538cd171976d898",
            "route_table_id": "rtb-0e54391be5fe02762",
            "subnet_id": "subnet-01595624a7b9b96ab"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway_1",
            "aws_route_table.route_table",
            "aws_subnet.subnet_1",
            "aws_vpc.vpc_proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_instancia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:security-group/sg-052bbe6bf3a5fc864",
            "description": "Permite a la instancia ser accedida desde SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-052bbe6bf3a5fc864",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH a Instancia",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2_rds_sg",
            "name_prefix": "",
            "owner_id": "509130302659",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "cost:env": "academy",
              "cost:project": "ac-us-terraform-202206",
              "env": "ac-tr-202206"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa079084845b1446"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:security-group/sg-0c8c4091b0fbc1b18",
            "description": "Permite a la instancia acceder a la BD",
            "egress": [],
            "id": "sg-0c8c4091b0fbc1b18",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Desde instancia a RDS",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "ec2_rds_sg2",
            "name_prefix": "",
            "owner_id": "509130302659",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "cost:env": "academy",
              "cost:project": "ac-us-terraform-202206",
              "env": "ac-tr-202206"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa079084845b1446"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:subnet/subnet-01595624a7b9b96ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01595624a7b9b96ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "509130302659",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_subnet_lucas"
            },
            "tags_all": {
              "Name": "vpc_subnet_lucas",
              "cost:env": "academy",
              "cost:project": "ac-us-terraform-202206",
              "env": "ac-tr-202206"
            },
            "vpc_id": "vpc-0fa079084845b1446"
          },
          "dependencies": [
            "aws_vpc.vpc_proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:subnet/subnet-0c20e3bdadfb7887f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c20e3bdadfb7887f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "509130302659",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_subnet_lucas_2"
            },
            "tags_all": {
              "Name": "vpc_subnet_lucas_2",
              "cost:env": "academy",
              "cost:project": "ac-us-terraform-202206",
              "env": "ac-tr-202206"
            },
            "vpc_id": "vpc-0fa079084845b1446"
          },
          "dependencies": [
            "aws_vpc.vpc_proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_proyecto",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:vpc/vpc-0fa079084845b1446",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08c68d25cd2b07b70",
            "default_route_table_id": "rtb-0b936f7e0f3d09846",
            "default_security_group_id": "sg-033a4966633401b32",
            "dhcp_options_id": "dopt-b99482db",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0fa079084845b1446",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b936f7e0f3d09846",
            "owner_id": "509130302659",
            "tags": {
              "Name": "vpc_lucas"
            },
            "tags_all": {
              "Name": "vpc_lucas",
              "cost:env": "academy",
              "cost:project": "ac-us-terraform-202206",
              "env": "ac-tr-202206"
            }
          }
        }
      ]
    }
  ]
}